[package]
name = "init_server"
version = "0.1.0"
authors = ["T. Oliver <tiju.oliver@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11.2"
num-traits = { version = "0.2.14", default-features = false }
memoffset = "0.6.4"