[package]
name = "init_server"
version = "0.1.0"
authors = ["T. Oliver <tiju.oliver@gmail.com>"]
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.14", default-features = false }
rust = { path = "../../lib/librust" }

[profile.release]
lto = true
